--- a/dist.ini
+++ b/dist.ini
@@ -1,13 +1,16 @@
-version=0.01
+version=0.001
 
 name=App-GetoptLongUtils
 
 [InsertExecsList]
 
 [@Author::PERLANCAR]
-:version=0.43
+:version=0.52
 
 [Prereqs]
 perl=5.010001
-
+strict=0
+warnings=0
+Data::Dmp=0
 Getopt::Long::Util=0
+
