Add utility: dump-getopt-long-script

--- a/dist.ini
+++ b/dist.ini
@@ -2,15 +2,19 @@ version=0.002
 
 name=App-GetoptLongUtils
 
+[GenPericmdScript / GenPericmdScript dump-getopt-long-script]
+url=/Getopt/Long/Dump/dump_getopt_long_script
+
 [InsertExecsList]
 
 [@Author::PERLANCAR]
-:version=0.52
+:version=0.53
 
 [Prereqs]
 perl=5.010001
 strict=0
 warnings=0
 Data::Dmp=0
+;!lint_prereqs assume-used "force version"
+Getopt::Long::Dump=0.07
 Getopt::Long::Util=0
-
