Add utility: detect-getopt-long-script

--- a/dist.ini
+++ b/dist.ini
@@ -5,6 +5,9 @@ name=App-GetoptLongUtils
 [GenPericmdScript / GenPericmdScript dump-getopt-long-script]
 url=/Getopt/Long/Dump/dump_getopt_long_script
 
+[GenPericmdScript / GenPericmdScript detect-getopt-long-script]
+url=/Getopt/Long/Util/detect_getopt_long_script
+
 [InsertExecsList]
 
 [@Author::PERLANCAR]
@@ -14,7 +17,8 @@ url=/Getopt/Long/Dump/dump_getopt_long_script
 perl=5.010001
 strict=0
 warnings=0
-Data::Dmp=0
+Data::Dmp=0.21
 ;!lint_prereqs assume-used "force version"
 Getopt::Long::Dump=0.07
 Getopt::Long::Util=0
+
