--- a/dist.ini
+++ b/dist.ini
@@ -7,6 +7,7 @@ url=/Getopt/Long/Dump/dump_getopt_long_script
 
 [GenPericmdScript / GenPericmdScript detect-getopt-long-script]
 url=/Getopt/Long/Util/detect_getopt_long_script
+default_format=json
 
 [InsertExecsList]
 
@@ -21,4 +22,3 @@ Data::Dmp=0.21
 ;!lint_prereqs assume-used "force version"
 Getopt::Long::Dump=0.07
 Getopt::Long::Util=0
-
