--- a/dist.ini
+++ b/dist.ini
@@ -9,6 +9,10 @@ url=/Getopt/Long/Dump/dump_getopt_long_script
 url=/Getopt/Long/Util/detect_getopt_long_script
 default_format=json
 
+[GenPericmdScript / GenPericmdScript gen-getopt-long-spec-from-getopt-std-spec]
+url=/Getopt/Long/Util/gen_getopt_long_spec_from_getopt_std_spec
+default_format=json
+
 [InsertExecsList]
 
 [@Author::PERLANCAR]
@@ -21,4 +25,5 @@ warnings=0
 Data::Dmp=0.21
 ;!lint_prereqs assume-used "force version"
 Getopt::Long::Dump=0.07
-Getopt::Long::Util=0
+Getopt::Long::Util=0.88
+
