--- a/dist.ini
+++ b/dist.ini
@@ -5,6 +5,9 @@ name=App-GetoptLongUtils
 [GenPericmdScript / GenPericmdScript dump-getopt-long-script]
 url=/Getopt/Long/Dump/dump_getopt_long_script
 
+[GenPericmdScript / GenPericmdScript dump-getopt-long-evenless-script]
+url=/Getopt/Long/EvenLess/Dump/dump_getopt_long_evenless_script
+
 [GenPericmdScript / GenPericmdScript detect-getopt-long-script]
 url=/Getopt/Long/Util/detect_getopt_long_script
 default_format=json
@@ -25,5 +28,5 @@ warnings=0
 Data::Dmp=0.21
 ;!lint_prereqs assume-used "force version"
 Getopt::Long::Dump=0.07
-Getopt::Long::Util=0.88
+Getopt::Long::Util=0.890
 
